Mise en place du REST fonctionnel